--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
----
-layout: default
----
+<!DOCTYPE html>
 
-window.location.replace("/about.html");
+<html lang="ko">
+
+<head>
+  <meta charset="utf-8">
+  <script>
+    location.replace("/about.html");
+  </script>
+</head>
+
+<body>
+
+</body>
+
+</html>
